# MIDI-monitor

./: .gitignore  README.md  io.github.rdbende.MidiMonitor.json  meson.build
data/: io.github.rdbende.MidiMonitor.desktop.in  io.github.rdbende.MidiMonitor.gschema.xml  io.github.rdbende.MidiMonitor.metainfo.xml.in  meson.build  midimonitor.gresource.xml
data/icons/: meson.build
data/resources/ui/: list_item.blp  preferences.blp  window.blp
po/: POTFILES  meson.build
src/: list_item.py  main.py  meson.build  midimonitor.gresource.xml  midimonitor.in  preferences.py  window.py  window.ui
